penyesuaian backend
