# app/Modules/Transaksi/Controllers/PengajuanMasukController.php
@@ -1,0 +1,62 @@
+<?php
+
+namespace App\Modules\Transaksi\Controllers;
+
+use App\Helpers\PaginationHelper;
+use App\Helpers\ResponseHelper;
+use App\Http\Controllers\Controller;
+use App\Modules\Transaksi\Requests\PengajuanBarangStore;
+use App\Modules\Transaksi\Services\PengajuanMasukService;
+use Illuminate\Http\JsonResponse;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Log;
+
+class PengajuanMasukController extends Controller
+{
+    public function index(Request $request): JsonResponse
+    {
+        $user = auth()->user();
+        $perPage = PaginationHelper::perPage($request);
+        $sort = PaginationHelper::sortCondition($request, PaginationHelper::SORT_DESC);
+        $keyword = $request->get('search') ?? '';
+
+        return ResponseHelper::successWithData(PengajuanMasukService::fetch($perPage, $sort, $keyword, $user));
+    }
+
+    public function store(PengajuanBarangStore $request): JsonResponse
+    {
+        $user = auth()->user();
+
+        try {
+            $success = PengajuanMasukService::store($request->validated(), $user);
+
+            if ($success) {
+                return ResponseHelper::successWithData(null, 'Resource berhasil dibuat', 201);
+            } else {
+                return ResponseHelper::badRequest('Resource gagal dibuat');
+            }
+        } catch (\Throwable $th) {
+            Log::error($th->getMessage());
+
+            return ResponseHelper::error($th, 'Terjadi kesalahan saat menjalankan aksi');
+        }
+    }
+
+    public function destroy(int $id): JsonResponse
+    {
+        $user = auth()->user();
+        try {
+            $success = PengajuanMasukService::destroy($id, $user);
+
+            if ($success) {
+                return ResponseHelper::successWithData(null, 'Resource berhasil dihapus');
+            } else {
+                return ResponseHelper::badRequest('Resource gagal dihapus');
+            }
+        } catch (\Throwable $th) {
+            Log::error($th->getMessage());
+
+            return ResponseHelper::error($th, 'Terjadi kesalahan saat menjalankan aksi');
+        }
+    }
+}
